Update documentation for the addition of setting windows DACL

--- a/README.j2
+++ b/README.j2
@@ -6,7 +6,7 @@
 {{ readme }}
 ## TODOs
 
- - windows support (DACL)
+ - add API allowing to set a custom DACL on windows
  - improve tests (how exactly?)
 
 {% if links != "" %}
